Cleanup: Java21, SAT (#4757)
Signed-off-by: Holger Friedrich <mail@holger-friedrich.de>